--- a/src/scss/framework/foundation/_framework.scss
+++ b/src/scss/framework/foundation/_framework.scss
@@ -1,9 +1,9 @@
 // Foundation
 //
-// A Framework for any device, medium, and accessibility. Foundation is a family
+// A Framework for any device, medium, and accessibility. <a href="http://foundation.zurb.com/" target="_blank">Foundation</a> is a family
 // of responsive front-end frameworks that make it easy to design beautiful
 // responsive websites, apps and emails that look amazing on any device.
-// Foundation is semantic, readable, flexible, and completely customizable.
+// Foundation is semantic, readable, flexible, and completely customizable. See <a href="http://foundation.zurb.com/" target="_blank">http://foundation.zurb.com/</a> for more information.
 //
 // Style guide: framework.foundation
 
@@ -17,13 +17,13 @@
 @import 'foundation';
 
 // Import ALL Foundation components (not recommended)
-@include foundation-everything;
+//@include foundation-everything;
 
 // Import Foundation components individually
-//@include foundation-global-styles;
-//@include foundation-xy-grid-classes;                   // USE CSS GRID INSTEAD
-//@include foundation-grid;                              // DEPRECATED
-//@include foundation-flex-grid;                         // DEPRECATED
+@include foundation-global-styles;
+//@include foundation-xy-grid-classes;
+//@include foundation-grid;                // DEPRECATED
+//@include foundation-flex-grid;           // DEPRECATED
 //@include foundation-flex-classes;
 //@include foundation-typography;
 //@include foundation-forms;
@@ -47,7 +47,7 @@
 //@include foundation-off-canvas;
 //@include foundation-orbit;
 //@include foundation-pagination;
-//@include foundation-progress-bar;
+//@include foundation-progress-bar;        // NOT COMPATIABLE WITH DRUPAL 7 STYLES
 //@include foundation-slider;
 //@include foundation-sticky;
 //@include foundation-reveal;
