--- a/src/scss/frontend/_mixins.scss
+++ b/src/scss/frontend/_mixins.scss
@@ -1,18 +1,16 @@
 // Mixins
 //
-// Custom Frontend Build mixins.
+// These are the default Frontend Build mixins. Frontend uses <a href="http://foundation.zurb.com/" target="_blank">Foundation</a> by default and if enabled provides a wide range of other mixins not listed below.
 //
 // Style guide: frontend.mixins
 
-// Container
+// container($width)
 //
 // Creates a max width container, designed to house your grid content.
 //
-// Markup:
-// <ul>
-//   <li><code>$width</code>: <code>numeric value</code><br>Default: <code>$css-grid-columns</code><br><i>Defines the max width.</i></li>
-// </ul>
-// <code>@include container($width);</code>
+// Compatible in IE6+, Firefox 2+, Safari 4+, Chrome 49+.
+//
+// $width - Defines the container max width. Default: <code>$global-width</code>
 //
 // Style guide: frontend.mixins.container
 @mixin container($width: $global-width) {
@@ -22,49 +20,45 @@
   width: 100%;
 }
 
-// CSS Grid
+// css-grid($columns, $rows, $column-gaps, $grid-row-gaps, $type)
 //
-// Creates a CSS grid container. <i>View in Firefox inspector to see a grid overlay.</i>
+// Creates a CSS grid container. <i>To debug, view in Firefox inspector and enable the grid overlay.</i>
 //
-// Markup:
-// <ul>
-//   <li><code>$grid-columns</code>: <code>responsive list</code><br>Default: <code>$css-grid-columns</code><br><i>Defines the number of grid columns.</i></li>
-//   <li><code>$grid-rows</code>: <code>responsive list</code><br>Default: <code>(small: none, medium: none)</code><br><i>Defines the number of grid rows.</i></li>
-//   <li><code>$grid-column-gaps</code>: <code>responsive list</code><br>Default: <code>$css-grid-column-gaps</code><br><i>Specifies the size of the grid lines between the columns.</i></li>
-//   <li><code>$grid-row-gaps</code>: <code>responsive list</code><br>Default: <code>$css-grid-row-gaps</code><br><i>Specifies the size of the grid lines between the rows.</i></li>
-//   <li><code>$type</code>: <code>grid|inline-grid|subgrid</code><br>Default: <code>grid</code><br><i>Defines the grid formatting context.</i></li>
-// </ul>
-// <code>@include css-grid($grid-columns, $grid-rows, $grid-column-gaps, $grid-row-gaps, $type);</code>
+// Compatible in IE11+, Firefox 54+, Safari 10.1+, Chrome 59+.
+//
+// $columns - Defines the number of grid columns. Default: <code>$css-grid-columns</code>
+// $rows - Defines the number of grid rows. Default: <code>(small: none, medium: none)</code>
+// $column-gaps - Specifies the size of the grid lines between the columns. Default: <code>$css-grid-column-gaps</code>
+// $row-gaps - Specifies the size of the grid lines between the rows. Default: <code>$css-grid-row-gaps</code>
+// $type - Defines the grid formatting context. Default: <code>grid</code>
 //
 // Style guide: frontend.mixins.grid
-@mixin css-grid($grid-columns: $css-grid-columns, $grid-rows: (small: none, medium: none), $grid-column-gaps: $css-grid-column-gaps, $grid-row-gaps: $css-grid-row-gaps, $type: grid) {
+@mixin css-grid($columns: $css-grid-columns, $rows: (small: none, medium: none), $column-gaps: $css-grid-column-gaps, $row-gaps: $css-grid-row-gaps, $type: grid) {
   // scss-lint:disable PropertySpelling
   display: $type;
-  grid-column-gap: map-get($grid-column-gaps, small);
-  grid-row-gap: map-get($grid-row-gaps, small);
-  grid-template-columns: repeat(map-get($grid-columns, small), 1fr);
-  grid-template-rows: map-get($grid-rows, small);
+  grid-column-gap: map-get($column-gaps, small);
+  grid-row-gap: map-get($row-gaps, small);
+  grid-template-columns: repeat(map-get($columns, small), 1fr);
+  grid-template-rows: map-get($rows, small);
 
   @include breakpoint(medium) {
-    grid-column-gap: map-get($grid-column-gaps, medium);
-    grid-row-gap: map-get($grid-row-gaps, medium);
-    grid-template-columns: repeat(map-get($grid-columns, medium), 1fr);
-    grid-template-rows: map-get($grid-rows, medium);
+    grid-column-gap: map-get($column-gaps, medium);
+    grid-row-gap: map-get($row-gaps, medium);
+    grid-template-columns: repeat(map-get($columns, medium), 1fr);
+    grid-template-rows: map-get($rows, medium);
   }
 }
 
-// CSS Grid Item
+// css-grid-item($column-start, $column-end, $row-start, $row-end)
 //
 // Creates a CSS grid container item. <i>View in Firefox inspector to see a grid overlay.</i>
 //
-// Markup:
-// <ul>
-//   <li><code>$column-start</code>: <code>responsive list</code><br>Default: <code>(small: auto, medium: auto)</code><br><i>Defines which column the grid item should start at.</i></li>
-//   <li><code>$column-end</code>: <code>responsive list</code><br>Default: <code>(small: auto, medium: auto)</code><br><i>Defines which column the grid item should end at.</i></li>
-//   <li><code>$row-start</code>: <code>responsive list</code><br>Default: <code>(small: auto, medium: auto)</code><br><i>Defines which row the grid item should start at.</i></li>
-//   <li><code>$row-end</code>: <code>responsive list</code><br>Default: <code>(small: auto, medium: auto)</code><br><i>Defines which row the grid item should end at.</i></li>
-// </ul>
-// <code>@include css-grid-item($column-start, $column-end, $row-start, $row-end);</code>
+// Compatible in IE11+, Firefox 54+, Safari 10.1+, Chrome 59+.
+//
+// $column-start - Defines which column the grid item should start at. Default: <code>(small: auto, medium: auto)</code>
+// $column-end - Defines which column the grid item should end at. Default: <code>(small: auto, medium: auto)</code>
+// $row-start - Defines which row the grid item should start at. Default: <code>(small: auto, medium: auto)</code>
+// $row-end - Defines which row the grid item should end at. Default: <code>(small: auto, medium: auto)</code>
 //
 // Style guide: frontend.mixins.grid-item
 @mixin css-grid-item($column-start: (small: auto, medium: auto), $column-end: (small: auto, medium: auto), $row-start: (small: auto, medium: auto), $row-end: (small: auto, medium: auto)) {
